add_executable(buffered_producer_example buffered_producer_example.cpp)
add_executable(consumer_dispatcher_example consumer_dispatcher_example.cpp)
add_executable(consumer_example consumer_example.cpp)
add_executable(consumers_information_example consumers_information_example.cpp)
add_executable(metadata_example metadata_example.cpp)
add_executable(producer_example producer_example.cpp)

target_link_libraries(buffered_producer_example CppKafka::cppkafka ${Boost_LIBRARIES})
target_link_libraries(consumer_dispatcher_example CppKafka::cppkafka ${Boost_LIBRARIES})
target_link_libraries(consumer_example CppKafka::cppkafka ${Boost_LIBRARIES})
target_link_libraries(consumers_information_example CppKafka::cppkafka ${Boost_LIBRARIES})
target_link_libraries(metadata_example CppKafka::cppkafka ${Boost_LIBRARIES})
target_link_libraries(producer_example CppKafka::cppkafka ${Boost_LIBRARIES})